k8s-resources/cluster-baseline-settings/kured.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kured                           # Must match `--ds-name`
  namespace: cluster-baseline-settings  # Must match `--ds-namespace`
spec:
  selector:
    matchLabels:
      name: kured
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: kured
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      serviceAccountName: kured
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
        - effect: NoExecute
          key: pci-scope
          operator: Equal
          value: in-scope
        - effect: NoExecute
          key: pci-scope
          operator: Equal
          value: out-of-scope
        - effect: NoSchedule
          key: CriticalAddonsOnly
          operator: Equal
          value: "true"
      hostPID: true # Facilitate entering the host mount namespace via init
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      containers:
        - name: kured
          # PRODUCTION READINESS CHANGE REQUIRED
          # This image should be sourced from a non-public container registry, such as the
          # one deployed along side of this reference implementation.
          # az acr import --source docker.io/weaveworks/kured:1.6.1 -n <your-acr-instance-name>
          # and then set this to
          # image: <your-acr-instance-name>.azurecr.io/weaveworks/kured:1.6.1
          image: docker.io/weaveworks/kured:1.6.1
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 500m
              memory: 48Mi
            requests:
              cpu: 200m
              memory: 16Mi
          securityContext:
            privileged: true # Give permission to nsenter /proc/1/ns/mnt
          command:
            - /usr/bin/kured
            - --ds-namespace=cluster-baseline-settings
