k8s-resources/cluster-baseline-settings/ns-cluster-baseline-settings.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cluster-baseline-settings
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: cluster-baseline-settings
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
